# MeshIR

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  run.bat  run.sh
include/meshir/ir_alloc_core/: ir_alloc.hpp
include/meshir/ir_core/: ir_builder.hpp  ir_graph.hpp  ir_op_types.hpp  ir_types.hpp
src/ir_alloc_impl/: ir_alloc.cpp
src/ir_core_impl/: ir_builder.cpp  ir_graph.cpp
test_bed/src/: main.cpp
